force-app/main/default/objects/Progress__c/Progress__c.object-meta.xml
<CustomObject>
    <label>Progress</label>
    <nameField>
        <label>Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>