force-app/main/default/objects/Progress__c/fields/CMUserStatus__c.field-meta.xml
<CustomField>
    <fullName>CMUserStatus__c</fullName>
    <label>CM User Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>