force-app/main/default/objects/Progress__c/fields/ProgressBarDate__c.field-meta.xml
<CustomField>
    <fullName>ProgressBarDate__c</fullName>
    <formula>IF( ISPICKVAL(Project__r.SAPStatus__c, &apos;WIPR&apos;), Project__r.EstimatedCompletionDate__c,  StartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar Date</label>
    <type>Date</type>
</CustomField>