force-app/main/default/objects/Progress__c/fields/ProjectAssignee__c.field-meta.xml
<CustomField>
    <fullName>ProjectAssignee__c</fullName>
    <label>ProjectAssignee</label>
    <length>12</length>
    <type>Text</type>
</CustomField>