force-app/main/default/objects/Progress__c/fields/SAPContestability__c.field-meta.xml
<CustomField>
    <fullName>SAPContestability__c</fullName>
    <label>SAPContestability</label>
    <length>30</length>
    <type>Text</type>
</CustomField>