force-app/main/default/objects/Progress__c/fields/SAPStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPStatus__c</fullName>
    <label>SAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMStatus</valueSetName>
    </valueSet>
</CustomField>