force-app/main/default/objects/Progress__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>SAP Start Date of the CM status</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>